--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -1,5 +1,25 @@
-.results {
+@font-face {
+    font-family: 'Averta Bold';
+    src: url('../Header/AvertaDemoPE-ExtraboldItalic.ttf')
+}
+
+.SearchResultsContainer {
+    border: 2px solid  #6D6875;
+    background: #E5989B;
+    border-radius: 12px;
+    color: azure;
     width: 50%;
-    border: 2px solid black;
-    border-radius: 4px;
+    margin: .25rem 2rem;
+    box-shadow: 0 2px 0px 1px #6D6875;
+}
+
+h2 {
+    font-family: 'Averta Bold';
+    color: #FFCDB2;
+    text-align: center;
+    margin: .5rem;
+    text-shadow: 1px 1px 2px slategray;
+    border-bottom: 1px solid  #6D6875;
+    margin: 0;
+    padding: .2rem;
 }
