--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,4 +16,5 @@ body {
   color: #6D6875;
   background-image: linear-gradient(90deg, #FFCDB2, #E5989B);
   background-size: cover;
+  height: 100%;
 }
