--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -16,10 +16,13 @@
 h2 {
     font-family: 'Averta Bold';
     color: #FFCDB2;
+    background-color: #B5838D;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     text-align: center;
     margin: .5rem;
     text-shadow: 1px 1px 2px slategray;
     border-bottom: 1px solid  #6D6875;
     margin: 0;
-    padding: .2rem;
+    height: 10%;
 }
