--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -3,6 +3,10 @@
     margin: 0;
     padding: .1rem .5rem;
     border-bottom: .5px solid  #6D6875;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .trackName {
@@ -13,4 +17,18 @@
     margin: .15rem auto;
     font-style: italic;
     color: #6D6875;
+}
+
+button {
+    background-color: azure;
+    margin-right: 2rem;
+    border-radius: 11rem;
+    border: 2px solid #6D6875;
+    background-color: #B5838D;
+    color: azure;
+} button:hover {
+    cursor: pointer;
+    background-color: #6D6875;
+} button:active {
+    opacity: 50%;
 }
