--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -13,16 +13,29 @@
     box-shadow: 0 2px 0px 1px #6D6875;
 }
 
-h2 {
-    font-family: 'Averta Bold';
+.playlistHeader {
     color: #FFCDB2;
     background-color: #B5838D;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    text-align: center;
-    margin: .5rem;
-    text-shadow: 1px 1px 2px slategray;
     border-bottom: 1px solid  #6D6875;
-    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     height: 10%;
+    align-items: center;
+}
+
+h2 {
+    font-family: 'Averta Bold';
+    text-shadow: 1px 1px 2px slategray;
+}
+
+.noBorder {
+    border: none;
+} .noBorder:hover {
+    background: none;
+    opacity: 70%;
+} .noBorder:active {
+    opacity: 37.5%;
 }
