--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -31,7 +31,17 @@ h2 {
     text-shadow: 1px 1px 2px slategray;
 }
 
+.playlistInput {
+    border: 2px solid #FFCDB2;
+    border-radius: 15px;
+    background-color: azure;
+    color: slategray;
+    text-align: center;
+    height: 1.2rem;
+}
+
 .noBorder {
+    margin-right: 0;
     border: none;
 } .noBorder:hover {
     background: none;
