completed first iteration of project. Hooked up to Spotify API. Users can now search spotify and create playlists.

--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -28,3 +28,9 @@ input {
 .align {
     align-self: center;
 }
+
+#searchButton {
+    background-color: azure;
+    border: 0px;
+    margin-right: 0px;
+}
